--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <VideoView
+        android:background="#00000000"
+        android:layout_gravity="center"
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="210dp" />
 
     <RelativeLayout
         android:background="#000"
