--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,13 @@
     tools:context=".MainActivity">
 
     <VideoView
-        android:background="#00000000"
-        android:layout_gravity="center"
         android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="210dp" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
 
     <RelativeLayout
         android:background="#000"
