--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <VideoView
+        android:visibility="gone"
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +17,6 @@
         android:layout_alignParentTop="true" />
 
     <RelativeLayout
-        android:background="#000"
         android:id="@+id/rl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
